@@ -153,9 +153,10 @@ int JackServer::InternalClientLoad(const char* client_name, const char* so_name,
         *status = 0;
         JackLoadableInternalClient* client = new JackLoadableInternalClient(fInstance, GetSynchroTable(), so_name, objet_data);
         assert(client);
-        int res = client->Open("unused", client_name, (jack_options_t)options, (jack_status_t*)status);
-        if (res < 0) {
+        if (client->Open("unused", client_name, (jack_options_t)options, (jack_status_t*)status) < 0) {
             delete client;
+            int my_status1 = *status | JackFailure;
+            *status = (jack_status_t)my_status1;
             *int_ref = 0;
         } else {
             *int_ref = client->GetClientControl()->fRefNum;
@@ -165,7 +166,6 @@ int JackServer::InternalClientLoad(const char* client_name, const char* so_name,
         *status = (jack_status_t)my_status1;
         *int_ref = 0;
     }
-
     return 0;
 }
 
